<resources>
    <string name="app_name">Quiz App [ By JustSp3cial ]</string>
    <string name="question1">Q1. What is the full meaning of OS?</string>
    <string name="question1_choice1">Operation System</string>
    <string name="question1_choice2">Operating System</string>
    <string name="question1_choice3">Open Source</string>

    <string name="question2">Q2.In binary code, the number 7 is written as?</string>
    <string name="question2_choice1">111</string>
    <string name="question2_choice2">101</string>
    <string name="question2_choice3">110</string>

    <string name="question3">Q3. Which of the following is an input device?</string>
    <string name="question3_choice1">Mouse</string>
    <string name="question3_choice2">VDU</string>
    <string name="question3_choice3">Keyboard </string>

    <string name="question4">Q4. In which generation of computers, transistors were used?</string>
l
    <string name="question5">Q5. In IT terminology failure in the kernel is called?</string>
    <string name="question5_choice1">Kernel error</string>
    <string name="question5_choice2">Kernel bug</string>
    <string name="question5_choice3">Crash</string>

    <string name="question6">Q6. RAM is an example of---- memory?</string>

    <string name="question7">Q7. Which of the following is an example of hardware?</string>
    <string name="question7_choice1">Scanner</string>
    <string name="question7_choice2">Printer</string>
    <string name="question7_choice3">Interpreter</string>

    <string name="question8">Q8. The OSI reference model is divided into how many layers?</string>

    <string name="question9">Q9. Which of the following is an example of non-volatile memory?</string>
    <string name="question9_choice1">RAM</string>
    <string name="question9_choice2">ROM</string>
    <string name="question9_choice3">Cache memory </string>

    <string name="question10">Q10.ALU stands for?</string>
    <string name="question10_choice1">Arithmetic and Logical Units</string>
    <string name="question10_choice2">Arithmetic Long Unit </string>
    <string name="question10_choice3">All Longer Units </string>


    <string name="submit_answers">Submit</string>

</resources>



