<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:background="@drawable/btn_bg"
            android:text=" Computer Basic test"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question1_choice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question1_choice1" />

                <RadioButton
                    android:id="@+id/question1_choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question1_choice2" />

                <RadioButton
                    android:id="@+id/question1_choice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question1_choice3" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question2_answer"
            android:paddingTop="0dp"
            android:text="@string/question2"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg"
            android:orientation="vertical">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question2_choice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question2_choice1" />

                <RadioButton
                    android:id="@+id/question2_choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question2_choice2" />

                <RadioButton
                    android:id="@+id/question2_choice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question2_choice3" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            android:textColor="#000000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/question3_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_choice1" />

            <CheckBox
                android:id="@+id/question3_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_choice2" />

            <CheckBox
                android:id="@+id/question3_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_choice3" />
        </LinearLayout>

        <TextView
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question4_answer"
            android:text="@string/question4"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/question4_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingLeft="@dimen/activity_horizontal_margin" />
        </LinearLayout>

        <TextView
            android:id="@+id/question5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:text="@string/question5"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg"
            android:orientation="vertical">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question5_choice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5_choice1" />

                <RadioButton
                    android:id="@+id/question5_choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5_choice2" />

                <RadioButton
                    android:id="@+id/question5_choice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5_choice3" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/question6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question5_answer"
            android:paddingTop="0dp"
            android:text="@string/question6"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/question6_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingLeft="@dimen/activity_horizontal_margin" />
        </LinearLayout>

        <TextView
            android:id="@+id/question7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:text="@string/question7"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/question7_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7_choice1" />

            <CheckBox
                android:id="@+id/question7_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7_choice2" />

            <CheckBox
                android:id="@+id/question7_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7_choice3" />

        </LinearLayout>

        <TextView
            android:id="@+id/question8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question8_answer"
            android:paddingTop="0dp"
            android:text="@string/question8"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/question8_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingLeft="@dimen/activity_horizontal_margin" />
        </LinearLayout>

        <TextView
            android:id="@+id/question9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:text="@string/question9"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg"
            android:orientation="vertical">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question9_choice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question9_choice1" />

                <RadioButton
                    android:id="@+id/question9_choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question9_choice2" />

                <RadioButton
                    android:id="@+id/question9_choice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question9_choice3" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/question10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question10_answer"
            android:paddingTop="0dp"
            android:text="@string/question10"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg"
            android:orientation="vertical">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question10_choice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question10_choice1" />

                <RadioButton
                    android:id="@+id/question10_choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question10_choice2" />

                <RadioButton
                    android:id="@+id/question10_choice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question10_choice3" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/submit_answers"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_bg"
            android:onClick="submitAnswers"
            android:text="@string/submit_answers"
            android:textColor="#ffffff" />

    </LinearLayout>
</ScrollView>